--- a/scripts/parameter_reduction_config.json
+++ b/scripts/parameter_reduction_config.json
@@ -1,21 +1,8 @@
 {
     "keep_elements": [
-        {
-            "component1": ["parameter1", "parameter2", "parameter3"]
-        },
-        {
-            "component2": ["parameter4", "*"]
-        }
+		"Signal1*"
     ],
     "delete_elements": [
-        {
-            "*": ["parameter7", "parameter8", "parameter9"]
-        },
-        {
-            "component4": ["*"]
-        },
-		{
-			"*": ["*"]
-		}
+		"*"
     ]
 }
